Add Desktop profile

--- a/config
+++ b/config
@@ -6,3 +6,8 @@ profile docked {
 profile undocked {
 	output eDP-1 enable scale 1.25 mode 3840x2160 position 0,0
 }
+
+profile desktop {
+	output DP-1 scale 1 mode 3840x2160 position 0,0
+}
+
